--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <ul class="our-team-list">
             <li class="our-team-item david">
               <img
-                src="./images/David Patel.jpg"
+                src="./images/david-patel.jpg"
                 alt="Photo David Patel"
                 width="264"
                 height="260"
@@ -285,7 +285,7 @@
             </li>
             <li class="our-team-item rachel">
               <img
-                src="./images/Rachel Kim.jpg"
+                src="./images/rachel-kim.jpg"
                 alt="Photo Rachel Kim"
                 width="264"
                 height="260"
@@ -298,7 +298,7 @@
             </li>
             <li class="our-team-item chen">
               <img
-                src="./images/Samantha Chen.jpg"
+                src="./images/samantha-chen.jpg"
                 alt="Photo Samantha Chen"
                 width="264"
                 height="260"
@@ -311,7 +311,7 @@
             </li>
             <li class="our-team-item andrew">
               <img
-                src="./images/Andrew Nguyen.jpg"
+                src="./images/andrew-nguyen.jpg"
                 alt="Photo Andrew Nguyen"
                 width="264"
                 height="260"
